WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62720
REGRESSION (
r88719
): 5by5.tv schedule is not visible
https://bugs.webkit.org/show_bug.cgi?id=62720
Summary
REGRESSION (r88719): 5by5.tv schedule is not visible
Vincent
Reported
2011-06-15 04:47:06 PDT
Created
attachment 97276
[details]
screen picture of browser window, showing invisible/unloaded schedule Safari 5.0.5 (6533.21.1,
r88851
) Schedule not visible
Attachments
screen picture of browser window, showing invisible/unloaded schedule
(545.70 KB, image/png)
2011-06-15 04:47 PDT
,
Vincent
no flags
Details
Patch
(4.24 KB, patch)
2011-06-15 14:04 PDT
,
Oliver Hunt
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-06-15 13:04:31 PDT
Bisection says that it broke in
r88719
.
Oliver Hunt
Comment 2
2011-06-15 13:05:54 PDT
This is sad making.
Oliver Hunt
Comment 3
2011-06-15 13:20:12 PDT
I see the problem
Oliver Hunt
Comment 4
2011-06-15 14:04:05 PDT
Created
attachment 97362
[details]
Patch
Darin Adler
Comment 5
2011-06-15 14:12:46 PDT
Comment on
attachment 97362
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97362&action=review
> Source/JavaScriptCore/parser/Lexer.h:205 > + if ((!WTF::isASCII(*ptr)) || (*ptr == '\\') || (*ptr == '_') || (*ptr == '$'))
THat really looks like too many parentheses to me. Are there any other characters that might be an issue.
Oliver Hunt
Comment 6
2011-06-15 14:47:26 PDT
Committed
r88974
: <
http://trac.webkit.org/changeset/88974
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug