2011-06-15  Oliver Hunt  <oliver@apple.com>

Reviewed by Darin Adler.

        REGRESSION (r88719): 5by5.tv schedule is not visible
        https://bugs.webkit.org/show_bug.cgi?id=62720

        Add test for the "interesting" ascii characters that may occur in an identifier

        * fast/js/parser-syntax-check-expected.txt:
        * fast/js/script-tests/parser-syntax-check.js:
2011-06-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (r88719): 5by5.tv schedule is not visible
        https://bugs.webkit.org/show_bug.cgi?id=62720

        Problem here is that the lexer wasn't considering '$' to be
        a valid character in an identifier.

        * parser/Lexer.h:
        (JSC::Lexer::lexExpectIdentifier):

Canonical link: https://commits.webkit.org/78319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88974 268f45cc-cd09-0410-ab3c-d52691b4dbfc